Issue 6191: Fix possible null pointer dereference